--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,56 @@
-# Compiled class file
-*.class
+############################
+# Gradle
+############################
+.gradle/
+build/
+out/
+!gradle/wrapper/gradle-wrapper.jar
 
-# Log file
+############################
+# Spring Boot / Java
+############################
+logs/
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+*.class
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+
+############################
+# IDE (IntelliJ / Rider)
+############################
+.idea/
+*.iml
+*.ipr
+*.iws
+/shelf/
+/workspace.xml
+/httpRequests/
+/dataSources/
+/dataSources.local.xml
+
+############################
+# VS Code
+############################
+.vscode/
+
+############################
+# OS
+############################
+.DS_Store
+Thumbs.db
+
+############################
+# Kubernetes / Docker
+############################
+*.pid
+*.swp
+
+############################
+# Temporary / misc
+############################
+*.tmp
+*.bak
+*.old
+*.orig
