--- a/aggregator-microservice/src/main/resources/application.properties
+++ b/aggregator-microservice/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-temperature.url=http://temperature-service:8080/temperature
-humidity.url=http://humidity-service:8080/humidity
-temperature.unit=C
+aggregator.temperatureUrl=http://temperature-service:8080/temperature
+aggregator.humidityUrl=http://humidity-service:8080/humidity
+aggregator.temperatureUnit=C
