--- a/k8s/config/aggregator-deployment.yaml
+++ b/k8s/config/aggregator-deployment.yaml
@@ -21,6 +21,9 @@ spec:
           volumeMounts:
             - name: config-volume
               mountPath: /config
+          env:
+            - name: SPRING_CONFIG_LOCATION
+              value: "file:/config/application.properties"
       volumes:
         - name: config-volume
           configMap:
